--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <% if @post.author %>
 <div class="authorName"><%= @post.author.name %></div>
 <a href="#" class="js-next" data-id="<%=@post.id%>">Next...</a>
-<h1 </h1>
+<h1><%= @post.title %></h1>
 <p class="postBody"><%= @post.description %></p>
 <% end %>
 
